fix(accordion): prevent chevron from being cut off on small screens or long text fix(accordion): reduce chevron icon size for better fit

--- a/src/components/accordion/base.css
+++ b/src/components/accordion/base.css
@@ -24,6 +24,7 @@
 
   & > details {
     box-sizing: border-box;
+    position: relative;
     width: 100%;
     &:not(:last-child) {
       border-bottom-width: 1px;
@@ -41,20 +42,22 @@
       display: flex;
       gap: 0.5rem;
       align-items: center;
-      justify-content: space-between;
+      justify-content: start;
       padding-block: 1rem;
+      padding-right: 1.5rem; /* space for icon */
       font-weight: 500;
       color: var(--color-on-base);
 
       &::after {
         content: "";
-        display: inline-block;
-        border-right: 1px solid currentColor;
-        border-bottom: 1px solid currentColor;
-        width: 0.625rem;
-        height: 0.625rem;
-        transform: rotate(45deg);
-        margin-left: auto;
+        border-bottom: 1px solid;
+        border-right: 1px solid;
+        width: .425rem;
+        height: .425rem;
+        position: absolute;
+        right: 0.5rem;
+        /* top: 50%; */
+        transform: translateY(-50%) rotate(45deg);
       }
     }
 
